// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App2 basic 1`] = `
Array [
  <div>
    <a
      href="javascript:void(0);"
      onClick={[Function]}
    >
      dec
    </a>
    <div>
      hello app2
    </div>
    <div />
    <a
      href="javascript:void(0);"
      onClick={[Function]}
    >
      inc
    </a>
  </div>,
  <div>
    <div>
      hello app2
    </div>
    <div />
  </div>,
]
`;

exports[`app2 test update 1`] = `
Array [
  <div>
    <a
      href="javascript:void(0);"
      onClick={[Function]}
    >
      dec
    </a>
    <div>
      hello app2 inc
    </div>
    <div />
    <a
      href="javascript:void(0);"
      onClick={[Function]}
    >
      inc
    </a>
  </div>,
  <div>
    <div>
      hello app2 inc
    </div>
    <div />
  </div>,
]
`;
